--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	
-	<name>Maven Web Application</name>
+	<name>JAVA Web Application</name>
 	<url>http://mithuntechnologies.com</url>
 	
 	<description>Maven Web Project</description>
