--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>
 		<!-- versions -->
-		<sonar.host.url>http://3.7.46.151:9000/</sonar.host.url>
+		<sonar.host.url>http://13.234.29.62:9000</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<spring.version>5.0.7.RELEASE</spring.version>
