--- a/javawebappdeployment.yml
+++ b/javawebappdeployment.yml
@@ -1,35 +1,31 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: ReplicationController
 metadata:
-  name: javawebappdeployment
+  name: mavenapprc
 spec:
-  strategy:
-    type: Recreate
-  replicas: 2
+  replicas: 3
   selector:
-    matchLabels:
-      app: javawebapp 
+    app: maven
   template:
     metadata:
-      name: javapods
+      name: mavenapppod
       labels:
-        app: javawebapp
+        app: maven
     spec:
       containers:
-      - name: javaappcontainers
-        image: redbull200/java-web-app:1
-        ports:
-        - containerPort: 8080
+        - name: mavenappcontainer
+          image: redbull200/maven-web-app:1
+          ports:
+            - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: javawebappsvc
+  name: mavenappservice
 spec:
   type: NodePort
   selector:
-    app: javawebapp
+    app: maven
   ports:
   - port: 80
     targetPort: 8080
----
