--- a/javawebappdeployment.yml
+++ b/javawebappdeployment.yml
@@ -1,20 +1,21 @@
+---
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: mavenapprc
+  name: javawebapprc
 spec:
   replicas: 3
   selector:
-    app: maven
+    app: javawebapp
   template:
     metadata:
-      name: mavenapppod
+      name: javawebapppod
       labels:
-        app: maven
+        app: javawebapp
     spec:
       containers:
         - name: mavenappcontainer
-          image: redbull200/maven-web-app:1
+          image: redbull200/java-web-app:${docker_pwd}
           ports:
             - containerPort: 8080
 ---
@@ -25,7 +26,8 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: maven
+    app: javawebapp
   ports:
   - port: 80
     targetPort: 8080
+---
